fixed some layout issues and enhanced the responsiveness

--- a/src/css/app.css
+++ b/src/css/app.css
@@ -3,6 +3,9 @@
   place-items: center;
   background-color: #dadbd3;
   height: 100vh;
+  background-image: url("https://user-images.githubusercontent.com/15075759/28719144-86dc0f70-73b1-11e7-911d-60d70fcded21.png");
+  background-repeat: repeat;
+  background-position: center;
 }
 
 .app__body {
