--- a/src/css/chat.css
+++ b/src/css/chat.css
@@ -1,5 +1,5 @@
 .chat {
-  flex-grow: 0.9;
+  flex: 0.7;
   display: flex;
   flex-direction: column;
 }
@@ -12,7 +12,7 @@
 }
 
 .chat__header-info {
-  flex-grow: 1;
+  flex: 1;
   padding-left: 10px;
 }
 
@@ -33,11 +33,11 @@
 }
 
 .chat__body {
-  flex-grow: 1;
+  flex: 1;
   background-image: url("https://user-images.githubusercontent.com/15075759/28719144-86dc0f70-73b1-11e7-911d-60d70fcded21.png");
   background-repeat: repeat;
   background-position: center;
-  padding: 20px;
+  padding: 10px 20px 0 20px;
   overflow-x: hidden;
   overflow-y: auto;
 }
@@ -49,6 +49,7 @@
   border-radius: 10px;
   background-color: #fff;
   width: fit-content;
+  max-width: 70%;
   margin-bottom: 7px;
 }
 
@@ -79,12 +80,12 @@
 }
 
 .chat__footer > form {
-  flex-grow: 1;
+  flex: 1;
   display: flex;
 }
 
 .chat__footer > form > input {
-  flex-grow: 1;
+  flex: 1;
   border-radius: 30px;
   border: none;
   outline: none;
