--- a/src/css/sidebar-chat.css
+++ b/src/css/sidebar-chat.css
@@ -12,9 +12,15 @@
 
 .sidebar-chat__info {
   margin-left: 10px;
+  display: flex;
+  flex-direction: column;
 }
 
 .sidebar-chat__info > h2 {
   font-size: 16px;
-  margin-bottom: 8px;
+}
+
+.sidebar-chat__info > p {
+  font-size: 14px;
+  color: #808080;
 }
